alb-ingress/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-alb-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/load-balancer-name: pub-alb-ingress
    alb.ingress.kubernetes.io/group.name: pub-alb-ingress
    #alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:224113960740:certificate/9dc22c91-1440-46b8-bea7-e902c7b9b2e5"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: argocd.gitops.jjikin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
